<resources>
    <string name="app_name">Dear today</string>
    <!--Onboarding-->
    <string name="btn_next">다음</string>
    <string name="btn_read_letter">편지 읽어보기</string>
    <string name="btn_look_player">플레이어 살펴보기</string>
    <string name="btn_go_next">다음으로</string>
    <string name="btn_play_player">플레이어 작동하기</string>
    <string name="btn_start_dt">디어투데이 시작하기</string>
    <string name="ob1_line1">오늘도 지친 몸을 끌고 집으로 돌아온 당신,</string>
    <string name="ob1_line2">방 안에 정체 불명의 상자 하나가 놓여 있습니다.</string>
    <string name="ob2_line1">상자를 터치해서 안을 확인해보세요.</string>
    <string name="ob4_line1">의심스러운 눈초리로 상자를 여는 순간,</string>
    <string name="ob4_line2">그 안에 들어있던 건 오랜만에 보는 비디오테이프와 플레이어.</string>
    <string name="ob4_line3">의아한 당신은 상자 안에서 작은 편지를 발견합니다.</string>
    <string name="ob5_line1">Dear</string>
    <string name="ob5_line2">2022년의 나,</string>
    <string name="ob5_line3">안녕!\n많이 놀랐지?</string>
    <string name="ob5_line4">믿기지 않을 수 있지만, 나는 2032년의 너야!\n너가 이 비디오테이프와 플레이어를\n잘 발견했으면 좋겠다.</string>
    <string name="ob5_line5">왜냐하면 이거,\n그냥 평범한 플레이어가 아니거든.</string>
    <string name="ob5_line6">바로 시간 여행을 도와주는 플레이어야.\n나도 이 친구를 이용해서 너를 만나러 온 거야 :)</string>
    <string name="ob6_line1">비디오 플레이어를 터치해서 사용법을 알아보세요.</string>
    <string name="ob7_line1">우선 플레이어를 사용하는 방법을 알려줄게.</string>
    <string name="ob7_line2">1. 너가 돌아가고 싶은 과거의 순간을 떠올려.\n2. 그 순간이 담긴 사진을 비디오테이프 위에 붙여.\n3. 비디오테이프를 플레이어에 넣고\n4. 뒤로감기 버튼을 누르면,\n5. 플레이어가 너를 과거의 그 순간으로\n&#160;&#160;&#160;&#160;데려다 줄거야.</string>
    <string name="ob8_line1">단, 이 시간 여행에는 규칙이 있어.\n우선 너가 직접 경험한 과거의 순간으로만\n돌아갈 수 있어.\n그리고 아쉽게도 그 순간으로 돌아간다고 해서\n이미 일어난 일을 바꾸지는 못해.</string>
    <string name="ob8_line2">다만, 너가 할 수 있는 단 한 가지 일은\n바로 과거의 너를 만나서 대화를 나누고\n그 친구에게 남기고 싶은 것을\n전달하고 올 수 있다는 거야.\n내가 너에게 이 플레이어를 전달한 것처럼 :)</string>
    <string name="ob8_line3">여기까지 읽었는데도 아직 와닿지가 않지?</string>
    <string name="ob8_line4">그럼 지금 한 번 플레이어를 바로 작동시켜봐.</string>
    <string name="ob11_line1">이 비디오 플레이어가\n너에게 꼭 도움이 되었으면 좋겠어!\n어쩌면 과거의 그 순간을 새롭게 바라보는\n기회가 될 수도 있거든.</string>
    <string name="ob11_line2">그리고 잊지 마.\n너의 오늘이야말로, 나한테는 정말 돌아가고 싶고 \n그리운 \'좋을 때\'의 한 순간이라는 것을.</string>
    <string name="ob11_line3">행복한 오늘에 \n하루하루 최선을 다해 살 수 있기를!</string>
    <string name="ob11_line4">Love,</string>
    <string name="ob11_line5">2032년의 너로부터 :)</string>
    <string name="signin_button_kakao">카카오로 계속하기</string>
    <string name="signin_caption_0"><u>디어투데이 체험해보기</u></string>
    <string name="signin_caption_1">체험판으로 하는 시간 여행은 저장기능을 제공하지 않습니다.</string>

    <!--Message Box-->
    <string name="my">나의</string>
    <string name="message">메시지</string>
    <string name="check_message">미래의 나로부터 도착한 메시지를 확인해보세요</string>
    <string name="empty_message">아직 나에게 도착한 메시지가 없어요!\n지금 바로 시간 여행을 떠나볼까요?</string>
    <string name="go_time_travel">시간 여행 떠나기</string>
    <string name="from_me">From. 미래의 나</string>

    <!--Time Travel-->
    <string name="time_travel_title">시간 여행</string>
    <string name="time_travel_caption">디어투데이와 함께한 시간 여행을\n확인하고 그날의 행복을 추억해 보세요</string>
    <string name="time_travel_empty_case">아직 디어투데이와 함께한 시간 여행이 없어요\n지금 바로 시간 여행을 떠나볼까요?</string>
    <string name="time_travel_detail_past">과거의 당신에게 꼭 해주고 싶은 말</string>
    <string name="time_travel_detail_title">나의 시간 여행</string>

    <!--Splash-->
    <string name="soundon">소리를 키우면 보다 풍부한 몰입감을 느끼실 수 있습니다.\n사운드 설정은 설정 메뉴에서 언제든지 변경할 수 있어요.</string>

    <!--Setting-->
    <string name="setting">설정</string>
    <string name="sound">사운드</string>
    <string name="pushalarm">푸시알림</string>
    <string name="deartoday_info">디어투데이 정보</string>
    <string name="service_rule">서비스 이용약관</string>
    <string name="inquiry">문의하기</string>
    <string name="opensource_license">오픈소스 라이선스</string>
    <string name="team_deartoday">Team 디어투데이</string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="leave_service"><u>서비스 탈퇴</u></string>

    <string name="default_notification_channel_id">default_messaging_channel</string>

</resources>