<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.onboarding.Onboarding5Fragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image_2_withg" />

        <ImageView
            android:id="@+id/iv_letter_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="134dp"
            android:src="@drawable/bg_letter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ob5_line1"
            style="@style/P5En"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="27dp"
            android:gravity="start"
            android:text="@string/ob5_line1"
            android:textColor="@color/blue_558fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_letter_5" />

        <TextView
            android:id="@+id/tv_ob5_line2"
            style="@style/P4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="9dp"
            android:gravity="start"
            android:text="@string/ob5_line2"
            android:textColor="@color/dark_gray_323232"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ob5_line1" />

        <TextView
            android:id="@+id/tv_ob5_line3"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="23dp"
            android:gravity="start"
            android:text="@string/ob5_line3"
            android:textColor="@color/dark_gray_323232"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ob5_line2" />

        <TextView
            android:id="@+id/tv_ob5_line4"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:text="@string/ob5_line4"
            android:textColor="@color/dark_gray_323232"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ob5_line3" />

        <TextView
            android:id="@+id/tv_ob5_line5"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:text="@string/ob5_line5"
            android:textColor="@color/dark_gray_323232"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ob5_line4" />

        <TextView
            android:id="@+id/tv_ob5_line6"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:text="@string/ob5_line6"
            android:textColor="@color/dark_gray_323232"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ob5_line5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_player"
            style="@style/BtnKr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_small_present"
            android:text="@string/btn_player"
            android:textColor="@color/blue_558fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ob5_line6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>