<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.onboarding.Onboarding4Fragment">

        <ImageView
            android:id="@+id/iv_background_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image_2_withg" />

        <TextView
            android:id="@+id/tv_ob4_line1"
            style="@style/Onboard0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/ob4_line1"
            android:textColor="@color/white_ffffff"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tv_ob4_line2"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ob4_line2"
            style="@style/Onboard0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/ob4_line2"
            android:textColor="@color/white_ffffff"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tv_ob4_line3"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ob4_line3"
            style="@style/Onboard0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:gravity="center"
            android:text="@string/ob4_line3"
            android:textColor="@color/white_ffffff"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_read_letter"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_read_letter"
            style="@style/BtnKr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_large_present"
            android:clickable="false"
            android:text="@string/btn_read_letter"
            android:textColor="@color/blue_558fff"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>