<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.onboarding.Onboarding1Fragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image_1_withg" />

        <TextView
            android:id="@+id/tv_ob1_line1"
            style="@style/Onboard0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:gravity="center"
            android:text="@string/ob1_line1"
            android:textColor="@color/white_ffffff"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ob1_line2"
            style="@style/Onboard0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/ob1_line2"
            android:textColor="@color/white_ffffff"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/BtnKr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_large_present"
            android:clickable="false"
            android:text="@string/btn_next"
            android:textColor="@color/blue_558fff"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>